--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Om Kharche" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Asadujjaman Apon" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Om Kharche">Om Kharche</h1>
+          <h1 class="name" title="Asadujjaman Apon">Asadujjaman Apon</h1>
 
-          <p class="title">Full Stack Developer</p>
+          <p class="title">Web Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:omtestmail@gmail.com" class="contact-link">omtestmail@gmail.com</a>
+              <a href="mailto:apon10080@gmail.com" class="contact-link">apon10080@gmail.com</a>
             </div>
 
           </li>
