--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            I'm Asadujjaman Apon a Creative Director and UI/UX Designer from Sarishabari, Jamalpur, working in web development.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
@@ -278,7 +278,7 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Professional development of applications Android.
                 </p>
               </div>
 
